--- a/cover.html
+++ b/cover.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>InfoCasas</title>
+        <title>Cabildo 500</title>
         <link rel="stylesheet" type="text/css" href="coverStyle.css">
 
     </head>
