--- a/cover.html
+++ b/cover.html
@@ -8,11 +8,17 @@
 
     <body>
         <header>
-            <ul>
-                <li> TuCasa </li>
-                <li> VENTA ALQUILER PROYECTOS</li>
+            <a href="cover.html">
+              <img src="img/logo.png" alt="Cabildo 500">
+            </a>
+            <ul class="opt1">
+                <li><a href="">VENTA</a></li>
+                <li><a href="">ALQUILER</a></li>
+                <li><a href="">PROYECTOS</a></li>
+            </ul>
+            <ul class="opt2">
                 <li><a href="">Contacto</a></li>
-                <li><a href=""><button>Publicar</button></a></li>
+                <li><button><a href="">Publicar</a></button></li>
                 <li><a href="">Iniciar Sesion</a></li>
             </ul>
         </header>
