--- a/cover.html
+++ b/cover.html
@@ -3,7 +3,7 @@
     <head>
         <title>Cabildo 500</title>
         <link rel="stylesheet" type="text/css" href="CSS/coverStyle.css">
-
+        <link rel="stylesheet" href="css/headerstyle.css">
     </head>
 
     <body>
