--- a/search-result.html
+++ b/search-result.html
@@ -4,10 +4,23 @@
      <meta charset="utf-8">
      <title></title>
      <link rel="stylesheet" href="css/search-result.css">
+     <link rel="stylesheet" href="css/headerstyle.css">
    </head>
    <body>
      <header>
-
+         <a href="cover.html">
+           <img src="img/logo.png" alt="Cabildo 500">
+         </a>
+         <ul class="opt1">
+             <li><a href="">VENTA</a></li>
+             <li><a href="">ALQUILER</a></li>
+             <li><a href="">PROYECTOS</a></li>
+         </ul>
+         <ul class="opt2">
+             <li><a href="">Contacto</a></li>
+             <li><button><a href="">Publicar</a></button></li>
+             <li><a href="">Iniciar Sesion</a></li>
+         </ul>
      </header>
 
      <div class="browserbox">
