--- a/cover.html
+++ b/cover.html
@@ -4,6 +4,7 @@
         <title>Cabildo 500</title>
         <link rel="stylesheet" type="text/css" href="CSS/coverStyle.css">
         <link rel="stylesheet" href="css/headerstyle.css">
+        <link rel="stylesheet" href="css/reset.css">
     </head>
 
     <body>
