--- a/search-result.html
+++ b/search-result.html
@@ -2,9 +2,10 @@
  <html lang="en" dir="ltr">
    <head>
      <meta charset="utf-8">
-     <title></title>
+     <title>Search Result</title>
      <link rel="stylesheet" href="css/search-result.css">
      <link rel="stylesheet" href="css/headerstyle.css">
+     <link rel="stylesheet" href="css/reset.css">
    </head>
    <body>
      <header>
