--- a/cover.html
+++ b/cover.html
@@ -18,7 +18,7 @@
             </ul>
             <ul class="opt2">
                 <li><a href="">Contacto</a></li>
-                <li><button><a href="">Publicar</a></button></li>
+                <li><button>Publicar</button></li>
                 <li><a href="">Iniciar Sesion</a></li>
             </ul>
         </header>
@@ -46,7 +46,7 @@
                         <option value="oficinas">Oficinas</option>
                 </select>
 
-                <input class="ubication" type="text" name="ubication" placeholder="Ubicacion ej: Pocitos, Montevideo">
+                <input class="ubication" type="text" name="ubication" placeholder="Ubicacion ej: Pocitos, Montevideo"/>
 
                 <button>Buscar</button>
 
