--- a/search-result.html
+++ b/search-result.html
@@ -24,7 +24,7 @@
      </header>
 
      <div class="browserbox">
-       <input class="browser" name="browser" type="text" placeholder="e.i New York City"></input>
+       <input class="browser" name="browser" type="text" placeholder="e.i New York City"/>
      </div>
 
      <div class="container">
