--- a/cover.html
+++ b/cover.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <title>Cabildo 500</title>
+        <link rel="stylesheet" href="CSS/reset.css">
+        <link rel="stylesheet" href="CSS/headerstyle.css">
         <link rel="stylesheet" type="text/css" href="CSS/coverStyle.css">
-        <link rel="stylesheet" href="css/headerstyle.css">
-        <link rel="stylesheet" href="css/reset.css">
     </head>
 
     <body>
         <header>
-            <a href="cover.html">
+            <a class="logo" href="cover.html">
               <img src="img/logo.png" alt="Cabildo 500">
             </a>
             <ul class="opt1">
@@ -19,19 +19,19 @@
             </ul>
             <ul class="opt2">
                 <li><a href="">Contacto</a></li>
-                <li><button><a href="">Publicar</a></button></li>
+                <li><button href="">Publicar</button></li>
                 <li><a href="">Iniciar Sesion</a></li>
             </ul>
         </header>
 
-        <div class="box">
+        <article class="box">
 
-            <div class="slogan">
+            <section class="slogan">
                 <h1>Alquiler y venta de apartamentos y casas en Uruguay</h1>
-            </div>
+            </section>
 
 
-            <div class="bar">
+            <section class="bar">
 
                 <select class="operation">
                         <option value="venta">Venta</option>
@@ -47,18 +47,18 @@
                         <option value="oficinas">Oficinas</option>
                 </select>
 
-                <input class="ubication" type="text" name="ubication" placeholder="Ubicacion ej: Pocitos, Montevideo">
+                <input class="ubication" type="text" name="ubication" placeholder="Ubicacion ej: Pocitos, Montevideo"/>
 
                 <button>Buscar</button>
 
                 <div>
                     <a href="">Buscar por referencia</a>
                 </div>
-            </div>
+            </section>
 
 
 
-        </div>
+        </article>
 
 
     </body>
