--- a/search-result.html
+++ b/search-result.html
@@ -9,7 +9,7 @@
    </head>
    <body>
 
-     <header>
+     <header id="header">
          <a class="logo" href="cover.html">
            <img src="img/logo.png" alt="Cabildo 500">
          </a>
