--- a/cover.html
+++ b/cover.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <header>
+        <header id="header">
             <a class="logo" href="cover.html">
               <img src="img/logo.png" alt="Cabildo 500">
             </a>
