social media images

--- a/post.html
+++ b/post.html
@@ -35,10 +35,10 @@
             </div>
             <nav class="socialMedia">
                 <ul>
-                    <li>Compartir en Facebook</li>
-                    <li>Compartir en Twitter</li>
-                    <li>Compartir en Instagram</li>
-                    <li>Enviar por E-mail</li>
+                    <li> <img src="img/facebook.png" alt=" Compartir en Facebook"/></li>
+                    <li><img src="img/twitter.png" alt=" Compartir en Twitter"></li>
+                    <li><img src="img/instagram.png" alt="Compartir en Instagram"> </li>
+                    <li><img src="img/whastapp.png" alt="Compartir en WhatsApp"></li>
 
                 </ul>
             </nav>
