--- a/cover.html
+++ b/cover.html
@@ -12,16 +12,18 @@
             <a class="logo" href="cover.html">
               <img src="img/logo.png" alt="Cabildo 500">
             </a>
-            <ul class="opt1">
-                <li><a href="">VENTA</a></li>
-                <li><a href="">ALQUILER</a></li>
-                <li><a href="">PROYECTOS</a></li>
-            </ul>
-            <ul class="opt2">
-                <li><a href="">Contacto</a></li>
-                <li><button href="">Publicar</button></li>
-                <li><a href="">Iniciar Sesion</a></li>
-            </ul>
+            <nav class="navs">
+              <ul class="opt1">
+                  <li><a href="">VENTA</a></li>
+                  <li><a href="">ALQUILER</a></li>
+                  <li><a href="">PROYECTOS</a></li>
+              </ul>
+              <ul class="opt2">
+                  <li><a href="">Contacto</a></li>
+                  <li><button href="">Publicar</button></li>
+                  <li><a href="">Iniciar Sesion</a></li>
+              </ul>
+            </nav>
         </header>
 
         <article class="box">
@@ -30,30 +32,34 @@
                 <h1>Alquiler y venta de apartamentos y casas en Uruguay</h1>
             </section>
 
+            <section class="content">
+              <div class="barbackground"></div>
+              <div class="bar">
 
-            <section class="bar">
+                  <select class="operation">
+                          <option value="venta">Venta</option>
+                          <option value="alquiler">Alquiler</option>
+                          <option value="alquilerTemporal">Alquiler Temporal</option>
+                  </select>
 
-                <select class="operation">
-                        <option value="venta">Venta</option>
-                        <option value="alquiler">Alquiler</option>
-                        <option value="alquilerTemporal">Alquiler Temporal</option>
-                </select>
+                  <select class="property">
+                          <option value="casas">Casas</option>
+                          <option value="aprtamentos">Apartamentos</option>
+                          <option value="terrenos">Terrenos</option>
+                          <option value="locales">Locales Comerciales</option>
+                          <option value="oficinas">Oficinas</option>
+                  </select>
 
-                <select class="property">
-                        <option value="casas">Casas</option>
-                        <option value="aprtamentos">Apartamentos</option>
-                        <option value="terrenos">Terrenos</option>
-                        <option value="locales">Locales Comerciales</option>
-                        <option value="oficinas">Oficinas</option>
-                </select>
+                  <input class="ubication" type="text" name="ubication" placeholder="Ubicacion ej: Pocitos, Montevideo"/>
 
-                <input class="ubication" type="text" name="ubication" placeholder="Ubicacion ej: Pocitos, Montevideo"/>
+                  <button class="btn">Buscar</button>
 
-                <button>Buscar</button>
-
-                <div>
-                    <a href="">Buscar por referencia</a>
-                </div>
+                  <!--
+                  <div>
+                      <a href="">Buscar por referencia</a>
+                  </div>
+                  -->
+              </div>
             </section>
 
 
