--- a/post.html
+++ b/post.html
@@ -9,10 +9,11 @@
 
     <body>
 
-        <header id="header">
-            <a class="logo" href="cover.html">
-              <img src="img/logo.png" alt="Cabildo 500">
-            </a>
+      <header id="header">
+          <a class="logo" href="cover.html">
+            <img src="img/logo.png" alt="Cabildo 500">
+          </a>
+          <nav class="navs">
             <ul class="opt1">
                 <li><a href="">VENTA</a></li>
                 <li><a href="">ALQUILER</a></li>
@@ -23,7 +24,8 @@
                 <li><button href="">Publicar</button></li>
                 <li><a href="">Iniciar Sesion</a></li>
             </ul>
-        </header>
+          </nav>
+      </header>
 
         <header class="innerHeader">
             <h1>Post Title</h1>
