--- a/search-result.html
+++ b/search-result.html
@@ -13,16 +13,18 @@
          <a class="logo" href="cover.html">
            <img src="img/logo.png" alt="Cabildo 500">
          </a>
-         <ul class="opt1">
-             <li><a href="">VENTA</a></li>
-             <li><a href="">ALQUILER</a></li>
-             <li><a href="">PROYECTOS</a></li>
-         </ul>
-         <ul class="opt2">
-             <li><a href="">Contacto</a></li>
-             <li><button href="">Publicar</button></li>
-             <li><a href="">Iniciar Sesion</a></li>
-         </ul>
+         <nav class="navs">
+           <ul class="opt1">
+               <li><a href="">VENTA</a></li>
+               <li><a href="">ALQUILER</a></li>
+               <li><a href="">PROYECTOS</a></li>
+           </ul>
+           <ul class="opt2">
+               <li><a href="">Contacto</a></li>
+               <li><button href="">Publicar</button></li>
+               <li><a href="">Iniciar Sesion</a></li>
+           </ul>
+         </nav>
      </header>
 
      <nav class="browserbox">
