flexbox postStyle.css mainbox

--- a/post.html
+++ b/post.html
@@ -50,22 +50,22 @@
 
         <div  class="box">
 
-            <section class="imgbox">
-                <img src="img/beach.jpg" alt="img">
-            </section>
+          <section class="imgbox">
+              <img src="img/beach.jpg" alt="img">
+          </section>
 
-            <aside class="contactbox">
-                <h2>Consultar Anunciante</h2>
-                <h4>Cabilo 500</h4>
-                <h2> 099 987 654</h2>
-                <form action="">
-                    <input type="text" placeholder="*Nombre Completo" required/>
-                    <input type="text" placeholder="*E-mail" required/>
-                    <input type="text" placeholder="Telefono"/>
-                    <input type="text" placeholder="*Escribe tu consulta" required/>
-                    <button> Enviar</button>
-                </form>
-            </aside>
+          <aside class="contactbox">
+              <h2>Consultar Anunciante</h2>
+              <h4>Cabildo 500</h4>
+              <h2> 099 987 654</h2>
+            <form action="">
+              <input type="text" placeholder="* Nombre Completo" required/>
+              <input type="text" placeholder="* E-mail" required/>
+              <input type="text" placeholder=" Telefono"/>
+              <input type="text" placeholder="* Escribe tu consulta" required/>
+              <button> Enviar</button>
+            </form>
+          </aside>
         </div>
 
         <div class="infobox">
