main cover responive

--- a/cover.html
+++ b/cover.html
@@ -35,20 +35,21 @@
             <section class="content">
               <div class="barbackground"></div>
               <div class="bar">
+                  <div class="innerbox">
+                    <select class="operation">
+                            <option value="venta">Venta</option>
+                            <option value="alquiler">Alquiler</option>
+                            <option value="alquilerTemporal">Alquiler Temporal</option>
+                    </select>
 
-                  <select class="operation">
-                          <option value="venta">Venta</option>
-                          <option value="alquiler">Alquiler</option>
-                          <option value="alquilerTemporal">Alquiler Temporal</option>
-                  </select>
-
-                  <select class="property">
-                          <option value="casas">Casas</option>
-                          <option value="aprtamentos">Apartamentos</option>
-                          <option value="terrenos">Terrenos</option>
-                          <option value="locales">Locales Comerciales</option>
-                          <option value="oficinas">Oficinas</option>
-                  </select>
+                    <select class="property">
+                            <option value="casas">Casas</option>
+                            <option value="aprtamentos">Apartamentos</option>
+                            <option value="terrenos">Terrenos</option>
+                            <option value="locales">Locales Comerciales</option>
+                            <option value="oficinas">Oficinas</option>
+                    </select>
+                  </div>
 
                   <input class="ubication" type="text" name="ubication" placeholder="Ubicacion ej: Pocitos, Montevideo"/>
 
