--- a/search-result.html
+++ b/search-result.html
@@ -41,7 +41,7 @@
            </div>
            <div class="description">
              <h3 class="type">ENTIRE APARTMENT</h3>
-             <h2 class="title">Direccion ficticia, 345, Result 1.</h2>
+             <h2 class="title">Direccion ficticia, 345.</h2>
              <p class="text">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
            </div>
          </section>
@@ -52,7 +52,7 @@
            </div>
            <div class="description">
              <h3 class="type">ENTIRE APARTMENT</h3>
-             <h2 class="title">Direccion ficticia, 345, Result 1.</h2>
+             <h2 class="title">Direccion ficticia, 345.</h2>
              <p class="text">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
            </div>
          </section>
@@ -63,7 +63,7 @@
            </div>
            <div class="description">
              <h3 class="type">ENTIRE APARTMENT</h3>
-             <h2 class="title">Direccion ficticia, 345, Result 1.</h2>
+             <h2 class="title">Direccion ficticia, 345.</h2>
              <p class="text">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
            </div>
          </section>
@@ -74,7 +74,7 @@
            </div>
            <div class="description">
              <h3 class="type">ENTIRE APARTMENT</h3>
-             <h2 class="title">Direccion ficticia, 345, Result 1.</h2>
+             <h2 class="title">Direccion ficticia, 345.</h2>
              <p class="text">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
            </div>
          </section>
