--- a/post.html
+++ b/post.html
@@ -5,11 +5,13 @@
         <link rel="stylesheet" href="CSS/reset.css">
         <link rel="stylesheet" href="CSS/headerstyle.css">
         <link rel="stylesheet" href="CSS/postStyle.css">
+
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     </header>
 
     <body>
 
-      <header id="header">
+        <header id="header">
           <a class="logo" href="cover.html">
             <img src="img/logo.png" alt="Cabildo 500">
           </a>
@@ -25,7 +27,7 @@
                 <li><a href="">Iniciar Sesion</a></li>
             </ul>
           </nav>
-      </header>
+        </header>
 
         <header class="innerHeader">
             <h1>Post Title</h1>
@@ -33,9 +35,9 @@
 
         <div class="innerHeader2">
             <div class="location">
-              <img src="" alt="">
-              <h4>Zona:</h4>
-              <h4 class="locationtext">Punta Ballena</h4>
+                <img src="" alt="">
+                <h4>Zona:</h4>
+                <h4 class="locationtext">Punta Ballena</h4>
             </div>
             <nav class="socialMedia">
                 <ul>
@@ -71,11 +73,18 @@
         <div class="infobox">
 
             <section class="mainInfo">
+                <!--
                 <ul>
-                    <li>Apartamento</li>
+                    <li><2 bedroom></li>
                     <li>1 Ambiente</li>
                     <li>1 Bathroom</li>
                     <li>35m2</li>
+                </ul> -->
+                <ul>
+                    <li><i class="fas fa-bed"></i></li>
+                    <li><i class="fas fa-dumbbell"></i></li>
+                    <li><i class="fas fa-bath"></i></li>
+                    <li><i class="fas fa-swimming-pool"></i></li>
                 </ul>
             </section>
 
