carousel + js post

--- a/search-result.html
+++ b/search-result.html
@@ -40,9 +40,9 @@
              <img src="img/img.jpg" alt="img1">
            </div>
            <div class="description">
-             <h3 class="type">ENTIRE APARTMENT</h3>
-             <h2 class="title">Direccion ficticia, 345.</h2>
-             <p class="text">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
+             <h3 class="propertyType">ENTIRE APARTMENT</h3>
+             <h2 class="address">Direccion ficticia, 345.</h2>
+             <p class="details">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
            </div>
          </section>
 
@@ -89,6 +89,15 @@
           frameborder="0" style="border:0" allowfullscreen></iframe>
        </aside>
      </div>
+
+
+     
+     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+     crossorigin="anonymous"></script>
+     <script src="cabildo.js"></script>
+
+
 
    </body>
  </html>
