--- a/post.html
+++ b/post.html
@@ -53,7 +53,8 @@
         <div  class="box">
 
           <section class="imgbox">
-              <img src="img/beach.jpg" alt="img">
+              <img src="img/beach.jpg" alt="img"> 
+        
           </section>
 
           <aside class="contactbox">
@@ -96,23 +97,23 @@
                 </div>
                 <div class="column">
                     <ul>
-                        <li>Elem</li>
-                        <li>Elem</li>
-                        <li>Elem</li>
-                        <li>Elem</li>
-                        <li>Elem</li>
-                        <li>Elem</li>
+                        <li class="id">Id</li>
+                        <li class="zoneId">Zone</li>
+                        <li class="address">Address</li>
+                        <li class="">Bathroom</li>
+                        <li>Bedroom</li>
+                        <li>Pet Friendly</li>
                         <li>Elem</li>
                     </ul>
                 </div>
 
                 <div class="column">
                     <ul>
-                        <li>Elem</li>
-                        <li>Elem</li>
-                        <li>Elem</li>
-                        <li>Elem</li>
-                        <li>Elem</li>
+                        <li class="propertyType">Property Type</li>
+                        <li class="operationType">Operation Type</li>
+                        <li class="Mt">Size</li>
+                        <li>Garage</li>
+                        <li>Luminosity</li>
                         <li>Elem</li>
                         <li>Elem</li>
                     </ul>
@@ -149,5 +150,12 @@
 
         </div>
 
+
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+        <script src="cabildo.js"></script>
+
     </body>
+    
 </html>
