responsive carouse finished

--- a/carousel.html
+++ b/carousel.html
@@ -9,8 +9,9 @@
 
 
   <body>
+    <div class="boxcontainer"
             <!-- Container for the image gallery -->
-      <div class="container">
+      <div class="imgbox">
 
           <!-- Full-width images with number text -->
           <div class="mySlides">
@@ -54,28 +55,28 @@
         
           <!-- Thumbnail images -->
           <div class="row">
-            <div class="column">
+            <div class="columnCarousel">
               <img class="demo cursor" src="img/beach.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
             </div>
-            <div class="column"> 
+            <div class="columnCarousel"> 
               <img class="demo cursor" src="img/coveropt2.png" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
             </div>
-            <div class="column">
+            <div class="columnCarousel">
               <img class="demo cursor" src="img/feli.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
             </div>
-            <div class="column">
+            <div class="columnCarousel">
               <img class="demo cursor" src="img/img.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
             </div>
-            <div class="column">
+            <div class="columnCarousel">
               <img class="demo cursor" src="img/logo.png" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
             </div> 
-            <div class="column">
+            <div class="columnCarousel">
               <img class="demo cursor" src="img/whastapp.png" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
             </div>
           </div>
         </div>
 
-
+      </div>  <!--boxcontainer-->
 
 
         <script>
