recomendations html css

--- a/cover.html
+++ b/cover.html
@@ -57,10 +57,55 @@
 
               </div>
             </section>
-
-
-
         </article>
+
+        <section class="recomendationbox"> 
+            <header class="recomendationHeader">
+                
+                <h2 class="title"> ♥  </h2>
+                <h2 class="title"> Busquedas Recomendadas </h2>
+            </header>
+            <div class="recomendedbox">
+
+                <div class="row">
+                    <div class="recomendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recomendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recomendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="recomendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recomendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recomendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="recomendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recomendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recomendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                </div>
+
+                    
+            </div>
+        </section>
 
 
     </body>
