recommendation box style

--- a/cover.html
+++ b/cover.html
@@ -33,7 +33,6 @@
             </section>
 
             <section class="content">
-              <div class="barbackground"></div>
               <div class="bar">
                   <div class="innerbox">
                     <select class="operation">
@@ -59,54 +58,59 @@
             </section>
         </article>
 
-        <section class="recomendationbox"> 
-            <header class="recomendationHeader">
-                
-                <h2 class="title"> ♥  </h2>
+        <section class="recommendationbox">
+            <header class="recommendationHeader">
+              <div class="recommendationHeaderText">
+                <h2 class="title"> ❤ </h2>
                 <h2 class="title"> Busquedas Recomendadas </h2>
+              </div>
             </header>
-            <div class="recomendedbox">
 
-                <div class="row">
-                    <div class="recomendedproperty">
-                        <img src="img/beach.jpg" alt="Recomended Property">
-                    </div>
-                    <div class="recomendedproperty">
-                        <img src="img/beach.jpg" alt="Recomended Property">
-                    </div>
-                    <div class="recomendedproperty">
-                        <img src="img/beach.jpg" alt="Recomended Property">
-                    </div>
-                </div>
+            <div class="recommendedbox">
 
-                <div class="row">
-                    <div class="recomendedproperty">
+                <!-- <div class="row"> -->
+                    <div class="recommendedproperty">
                         <img src="img/beach.jpg" alt="Recomended Property">
                     </div>
-                    <div class="recomendedproperty">
+                    <div class="recommendedproperty">
                         <img src="img/beach.jpg" alt="Recomended Property">
                     </div>
-                    <div class="recomendedproperty">
+                    <div class="recommendedproperty">
                         <img src="img/beach.jpg" alt="Recomended Property">
                     </div>
-                </div>
+                <!-- </div> -->
 
-                <div class="row">
-                    <div class="recomendedproperty">
+                <!-- <div class="row"> -->
+                    <div class="recommendedproperty">
                         <img src="img/beach.jpg" alt="Recomended Property">
                     </div>
-                    <div class="recomendedproperty">
+                    <div class="recommendedproperty">
                         <img src="img/beach.jpg" alt="Recomended Property">
                     </div>
-                    <div class="recomendedproperty">
+                    <div class="recommendedproperty">
                         <img src="img/beach.jpg" alt="Recomended Property">
                     </div>
-                </div>
+                <!-- </div> -->
 
-                    
+                <!-- <div class="row"> -->
+                    <div class="recommendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recommendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recommendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                <!-- </div> -->
+
+
             </div>
         </section>
 
+        <footer id="footer">
+        </footer>
+
 
     </body>
-</html> 
+</html>
