dynamic load cover highlight property listing

--- a/cover.html
+++ b/cover.html
@@ -59,58 +59,61 @@
         </article>
 
         <section class="recommendationbox">
-            <header class="recommendationHeader">
-              <div class="recommendationHeaderText">
-                <h2 class="title"> ❤ </h2>
-                <h2 class="title"> Busquedas Recomendadas </h2>
-              </div>
-            </header>
-
-            <div class="recommendedbox">
-
-                <!-- <div class="row"> -->
-                    <div class="recommendedproperty">
-                        <img src="img/beach.jpg" alt="Recomended Property">
-                    </div>
-                    <div class="recommendedproperty">
-                        <img src="img/beach.jpg" alt="Recomended Property">
-                    </div>
-                    <div class="recommendedproperty">
-                        <img src="img/beach.jpg" alt="Recomended Property">
-                    </div>
-                <!-- </div> -->
-
-                <!-- <div class="row"> -->
-                    <div class="recommendedproperty">
-                        <img src="img/beach.jpg" alt="Recomended Property">
-                    </div>
-                    <div class="recommendedproperty">
-                        <img src="img/beach.jpg" alt="Recomended Property">
-                    </div>
-                    <div class="recommendedproperty">
-                        <img src="img/beach.jpg" alt="Recomended Property">
-                    </div>
-                <!-- </div> -->
-
-                <!-- <div class="row"> -->
-                    <div class="recommendedproperty">
-                        <img src="img/beach.jpg" alt="Recomended Property">
-                    </div>
-                    <div class="recommendedproperty">
-                        <img src="img/beach.jpg" alt="Recomended Property">
-                    </div>
-                    <div class="recommendedproperty">
-                        <img src="img/beach.jpg" alt="Recomended Property">
-                    </div>
-                <!-- </div> -->
-
-
+          <header class="recommendationHeader">
+            <div class="recommendationHeaderText">
+              <h2 class="title"> ❤ </h2>
+              <h2 class="title"> Busquedas Recomendadas </h2>
             </div>
+          </header>
+
+          <div id="recommendedbox" class="recommendedbox">
+
+                <!-- <div class="row">
+                    <div class="recommendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recommendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recommendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="recommendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recommendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recommendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="recommendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recommendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                    <div class="recommendedproperty">
+                        <img src="img/beach.jpg" alt="Recomended Property">
+                    </div>
+                </div> -->
+
+
+          </div>
         </section>
 
         <footer id="footer">
         </footer>
 
-
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+        <script src="js/coverdynamicload.js"></script>
     </body>
 </html>
