--- a/post.html
+++ b/post.html
@@ -75,27 +75,27 @@
 
             <div class="mySlides">
             <div class="numbertext">2 / 6</div>
-                <img src="img/coveropt2.png" style="width:100%">
+                <img src="img/destacados/1.png" style="width:100%">
             </div>
 
             <div class="mySlides">
             <div class="numbertext">3 / 6</div>
-                <img src="img/feli.jpg" style="width:100%">
+                <img src="img/destacados/2.png" style="width:100%">
             </div>
 
             <div class="mySlides">
             <div class="numbertext">4 / 6</div>
-                <img src="img/img.jpg" style="width:100%">
+                <img src="img/destacados/3.png" style="width:100%">
             </div>
 
             <div class="mySlides">
             <div class="numbertext">5 / 6</div>
-                <img src="img/logo.png" style="width:100%">
+                <img src="img/destacados/4.png" style="width:100%">
             </div>
 
             <div class="mySlides">
             <div class="numbertext">6 / 6</div>
-                <img src="img/whastapp.png" style="width:100%">
+                <img src="img/destacados/5.png" style="width:100%">
             </div>
 
             <!-- Next and previous buttons -->
@@ -109,24 +109,24 @@
 
             <!-- Thumbnail images -->
             <div class="row">
-            <div class="columnCarousel">
-                <img class="demo cursor" src="img/beach.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
-            </div>
-            <div class="columnCarousel">
-                <img class="demo cursor" src="img/coveropt2.png" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
-            </div>
-            <div class="columnCarousel">
-                <img class="demo cursor" src="img/feli.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
-            </div>
-            <div class="columnCarousel">
-                <img class="demo cursor" src="img/img.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
-            </div>
-            <div class="columnCarousel">
-                <img class="demo cursor" src="img/logo.png" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
-            </div>
-            <div class="columnCarousel">
-                <img class="demo cursor" src="img/whastapp.png" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
-            </div>
+                <div class="columnCarousel">
+                    <img class="demo cursor" src="img/beach.jpg" style="width:100%" onclick="currentSlide(1)" alt="Beach House">
+                </div>
+                <div class="columnCarousel">
+                    <img class="demo cursor" src="img/destacados/1.png" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+                </div>
+                <div class="columnCarousel">
+                    <img class="demo cursor" src="img/destacados/2.png" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+                </div>
+                <div class="columnCarousel">
+                    <img class="demo cursor" src="img/destacados/3.png" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+                </div>
+                <div class="columnCarousel">
+                    <img class="demo cursor" src="img/destacados/4.png" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+                </div>
+                <div class="columnCarousel">
+                    <img class="demo cursor" src="img/destacados/5.png" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+                </div>
             </div>
         </div>
 
@@ -163,23 +163,6 @@
                 captionText.innerHTML = dots[slideIndex-1].alt;
             }
             </script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
           <aside class="contactbox">
@@ -280,6 +263,7 @@
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
         <script src="js/cabildo.js"></script>
+        <script src="js/dynamicpost.js"></script>
 
     </body>
 
