--- a/search-result.html
+++ b/search-result.html
@@ -41,9 +41,9 @@
            </div>
            <div class="description">
              <h3 class="propertyType">ENTIRE APARTMENT</h3>
-             <h2 class="address">Direccion ficticia, 345.</h2>
+             <h2 class="address">1 Direccion ficticia, 345.</h2>
              <p class="details">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
-           </div>
+           </div> 
          </section>
 
          <section class="result">
@@ -52,7 +52,7 @@
            </div>
            <div class="description">
              <h3 class="type">ENTIRE APARTMENT</h3>
-             <h2 class="title">Direccion ficticia, 345.</h2>
+             <h2 class="title">2 Direccion ficticia, 345.</h2>
              <p class="text">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
            </div>
          </section>
@@ -63,7 +63,7 @@
            </div>
            <div class="description">
              <h3 class="type">ENTIRE APARTMENT</h3>
-             <h2 class="title">Direccion ficticia, 345.</h2>
+             <h2 class="title">3 Direccion ficticia, 345.</h2>
              <p class="text">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
            </div>
          </section>
@@ -74,11 +74,32 @@
            </div>
            <div class="description">
              <h3 class="type">ENTIRE APARTMENT</h3>
-             <h2 class="title">Direccion ficticia, 345.</h2>
+             <h2 class="title">4 Direccion ficticia, 345.</h2>
              <p class="text">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
            </div>
          </section>
 
+         <section class="result">
+          <div class="imgbox">
+            <img src="img/img.jpg" alt="img1">
+          </div>
+          <div class="description">
+            <h3 class="type">ENTIRE APARTMENT</h3>
+            <h2 class="title">4 Direccion ficticia, 345.</h2>
+            <p class="text">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
+          </div>
+        </section>
+        <section class="result">
+          <div class="imgbox">
+            <img src="img/img.jpg" alt="img1">
+          </div>
+          <div class="description">
+            <h3 class="type">ENTIRE APARTMENT</h3>
+            <h2 class="title">4 Direccion ficticia, 345.</h2>
+            <p class="text">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
+          </div>
+        </section>
+        
        </article>
 
        <aside class="mapbox">
