--- a/search-result.html
+++ b/search-result.html
@@ -33,8 +33,8 @@
 
      <div class="container"> 
        
-       <article class="resultsbox">
-
+       <article id="resultbox" class="resultsbox">
+        <!--
          <section class="result">
            <div class="imgbox">
              <img src="img/img.jpg" alt="img1">
@@ -98,7 +98,7 @@
             <h2 class="title">4 Direccion ficticia, 345.</h2>
             <p class="text">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
           </div>
-        </section>
+        </section> -->
         
        </article>
 
@@ -117,6 +117,7 @@
      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
      crossorigin="anonymous"></script>
      <script src="cabildo.js"></script>
+     <script> src="js/dynamicresults.js"</script>
 
 
 
